# copepod

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: __init__.py  auth.py  chat.py  repos.py  webhooks.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  code_parser.py  cognee_service.py  diff_analyzer.py  formatter.py  github_service.py  ingestion_service.py  satisfaction.py  triage_service.py
backend/app/utils/: auth.py  crypto.py  gemini_fallback.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/copepod_mcp/: __init__.py  config.py  server.py
studio/: .dockerignore  Dockerfile  package-lock.json  package.json
studio/src/app/: globals.css  layout.tsx  page.tsx
studio/src/app/studio/: layout.tsx  page.tsx
vscode-extension/: .gitignore  package-lock.json  package.json
vscode-extension/src/: apiClient.ts  extension.ts  gitDetector.ts  graphProvider.ts  repoTreeProvider.ts
