[project]
name = "copepod-backend"
version = "0.1.0"
description = "Institutional memory layer for GitHub repositories, built on Cognee"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "cognee>=0.1.0",
    "fastembed>=0.3.0",
    "PyGithub>=2.3.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.3.0",
    "sse-starlette>=2.0.0",
    "alembic>=1.13.0",
    "google-genai>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
